# docs/openapi.yaml
@@ -1353,14 +1353,12 @@ components:
     Status:
       type: object
       additionalProperties: false
-      required: [total_subscriptions, wolfx, fanstudio, durable, ready_queues]
+      required: [total_subscriptions, wolfx, durable, ready_queues]
       properties:
         total_subscriptions:
           type: integer
           minimum: 0
         wolfx:
-          $ref: "#/components/schemas/ChannelStatus"
-        fanstudio:
           $ref: "#/components/schemas/ChannelStatus"
         huania:
           $ref: "#/components/schemas/ChannelStatus"
